--- a/src/phases/Rules.am
+++ b/src/phases/Rules.am
@@ -1,9 +1,11 @@
 yaccpp_SOURCES +=	\
 	anon_rules.cc	\
+	call_macros.cc	\
 	cardinality.cc	\
 	insert_syms.cc	\
 	is_ref.h	\
 	nop.cc		\
 	print.cc	\
 	resolve_refs.cc	\
-	scobind.cc
+	scobind.cc	\
+	xmlprint.cc
