use new travis-depend

--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,12 @@
-Source: ocaml-yaccpp
-Section: ocaml
+Source: yaccpp
+Section: devel
 Priority: optional
 Maintainer: Pippijn van Steenhoven <pip88nl@gmail.com>
 Uploaders: 
   Pippijn van Steenhoven <pip88nl@gmail.com>
 Build-Depends:
   omake,
-  ocaml-nox (>= 3.12),
-  ocaml-findlib,
-  libbaselib-ocaml-dev,
   libboost-dev,
-  dh-ocaml,
   debhelper (>= 8.0.0)
 Standards-Version: 3.9.2
 Homepage: https://github.com/pippijn/yaccpp
@@ -19,9 +15,6 @@ Vcs-Browser: https://github.com/pippijn/yaccpp
 
 Package: yaccpp
 Architecture: any
-Depends: ${ocaml:Depends}, ${misc:Depends}
-Provides: ${ocaml:Provides}
-Recommends: ocaml-findlib
-Description: Common library for OCaml projects
- This library contains some common modules I use for
- most of my projects.
+Depends: ${misc:Depends}
+Description: Yacc Preprocessor
+ Stuff.
