--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,16 @@ language: c
 script: dpkg-buildpackage -b -us -uc
 
 install:
-   - sudo apt-get install omake noweb valgrind dh-ocaml libbatteries-ocaml-dev libsexplib-camlp4-dev libderiving-ocsigen-ocaml-dev libboost-dev
-   - wget https://raw.github.com/pippijn/obuild/master/script/travis-depend
+   # Add PPA to download from.
+   - sudo apt-add-repository -y ppa:pippijn/ppa
+   - sudo apt-get update
+   # GitHub dependencies.
+   - sudo apt-get install devscripts equivs
+   - wget https://raw.github.com/pippijn/obuild/master/script/travis-depend?$(date +%s) -O travis-depend
    - chmod +x travis-depend
-   - ./travis-depend baselib
+   - ./travis-depend obuild
+   # Package dependencies.
+   - sudo mk-build-deps -ir
 
 # whitelist
 branches:
