we need baselib for runtests

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
    - sudo apt-get install devscripts equivs
    - wget https://raw.github.com/pippijn/obuild/master/script/travis-depend?$(date +%s) -O travis-depend
    - chmod +x travis-depend
-   - ./travis-depend obuild
+   - ./travis-depend obuild baselib
    # Package dependencies.
    - sudo mk-build-deps -ir
 
