--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
-language: c
+language: c++
 script: dpkg-buildpackage -b -us -uc
 
 install:
    # Add PPA to download from.
    - sudo apt-add-repository -y ppa:pippijn/ppa
    - sudo apt-get update
-   # GitHub dependencies.
-   - sudo apt-get install devscripts equivs
-   - wget https://raw.github.com/pippijn/obuild/master/script/travis-depend?$(date +%s) -O travis-depend
-   - chmod +x travis-depend
-   - ./travis-depend obuild baselib
    # Package dependencies.
+   - sudo apt-get install devscripts equivs
    - sudo mk-build-deps -ir
 
 # whitelist
